add Open Graph Protocol

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,27 @@
       name="description"
       content="Little Lemon - A family-owned Mediterranean restaurant in Chicago, focused on traditional recipes served with a modern twist."
     />
+
+    <!-- Open Graph Protocol tags -->
+    <meta property="og:title" content="Little Lemon Restaurant - Reserve a Table" />
+    <meta property="og:description" content="A family-owned Mediterranean restaurant in Chicago, focused on traditional recipes served with a modern twist. Book your table today!" />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
+    <meta property="og:url" content="https://littlelemon.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Little Lemon Restaurant" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Open Graph image dimensions -->
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Little Lemon Restaurant - Mediterranean cuisine" />
+
+    <!-- Twitter Card tags (for better Twitter sharing) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Little Lemon Restaurant - Reserve a Table" />
+    <meta name="twitter:description" content="A family-owned Mediterranean restaurant in Chicago, focused on traditional recipes served with a modern twist." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/og-image.jpg" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Little Lemon Restaurant - Reserve a Table</title>
